@@ -87,10 +87,6 @@ BEGIN_C_DECLS
  *============================================================================*/
 
 /*----------------------------------------------------------------------------
- * Macros used for matching of MED 2.3 to MED 3.0 API
- *----------------------------------------------------------------------------*/
-
-/*----------------------------------------------------------------------------
  * MED mesh structure
  *----------------------------------------------------------------------------*/
 
@@ -412,7 +408,7 @@ _add_med_mesh(fvm_to_med_writer_t  *writer,
 {
   int i, j, id;
   int n_gc = 0;
-  char med_info[MED_COMMENT_SIZE + 1] = "Generated by Code_Saturne/FVM.";
+  char med_info[MED_COMMENT_SIZE + 1] = "Generated by Code_Saturne.";
   char family_name[MED_NAME_SIZE + 1] = "";
 
   char  dtunit[MED_LNAME_SIZE + 1] = "s";
@@ -1544,7 +1540,7 @@ _export_vertex_coords_g(const fvm_nodal_t    *mesh,
 
     for (i_lnod = 0; i_lnod < n_extra_vertices; i_lnod++) {
       for (i_dim = 0; i_dim < dim; i_dim++)
-        part_coords[idx++] = (med_float)vertex_coords[i_lnod*dim + i_dim];
+        part_coords[idx++] = (med_float)extra_vertex_coords[i_lnod*dim + i_dim];
     }
 
     BFT_FREE(extra_vertex_coords);
@@ -1873,6 +1869,7 @@ _export_families_g(const fvm_writer_section_t  *export_section,
   if (n_sections > 1) {
 
     start_id = 0;
+    n_g_elements = 0;
 
     BFT_MALLOC(_g_elt_num, part_size, cs_gnum_t);
     g_elt_num = _g_elt_num;
@@ -1886,10 +1883,14 @@ _export_families_g(const fvm_writer_section_t  *export_section,
       const cs_lnum_t section_size
         = fvm_io_num_get_local_count(section->global_element_num);
 
-      memcpy(_g_elt_num + start_id,
-             fvm_io_num_get_global_num(section->global_element_num),
-             sizeof(cs_gnum_t)*section_size);
+      const cs_gnum_t *s_gnum
+        = fvm_io_num_get_global_num(section->global_element_num);
+
+      for (cs_lnum_t k = 0; k < section_size; k++)
+        _g_elt_num[start_id + k] = s_gnum[k] + n_g_elements;
+
       start_id += section_size;
+      n_g_elements += fvm_io_num_get_global_count(section->global_element_num);
 
       current_section = current_section->next;
 
@@ -2148,7 +2149,7 @@ _export_families_g(const fvm_writer_section_t  *export_section,
  * Count local and global elements for a given section type.
  *
  * parameters:
- *   export_sections  <-- pointer to sections list to export.
+ *   export_sections <-- pointer to sections list to export.
  *   n_elements      --> number of elements for this section type
  *   n_g_elements    --> global number of elements for this section type
  *----------------------------------------------------------------------------*/
